improved systemd error logging

--- a/src/packaging/bin/init-script/hivemq.service
+++ b/src/packaging/bin/init-script/hivemq.service
@@ -7,7 +7,7 @@ Group=hivemq
 User=hivemq
 LimitNOFILE=infinity
 StandardOutput=null
-StandardError=null
+StandardError=journal
 WorkingDirectory=/opt/hivemq
 ExecStart=/opt/hivemq/bin/run.sh
 KillMode=process
